# ler_documento

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  texto_bem_vindo.txt
css/: interface.css
scripts/: configurar.py  exportar_texto_para_txt.py
src/: carregar_texto.py  entradas.py  estruturas.py  extrair_texto.py  falar.py  hash.py  interface.py  modulo_intermediario.py  processar_texto.py  salvar.py  structures.py  threads.py  utils.py
tests/: tests_carregar_texto.py  tests_extrair_texto.py  tests_falar.py  tests_hash.py  tests_processar_texto.py  tests_salvar.py  tests_threads.py  tests_utils.py
textos/: texto_bem_vindo.txt
